# RunningLocalAI

./: .gitignore  .gitmodules  README.md  requirements.txt
data/logs/: benchmark_report-Fast Router.csv  benchmark_report.csv
src/: README.md
src/Lesson-01/: 01-ConnectToLocal.py  02-InstrumentedTest.py  README.md
src/Lesson-02/: 01-StreamResponse.py  02-StreamTest.py  03-AnalyzeStreamTest.py  04-RecommendationTest.py  README.md  Stream_benchmark_2026-03-01_13-37-15.csv
src/Lesson-03/: 01-DocumentIngest.py  02-VectorRetrieval.py  03-RAGStream.py  04-RAGPerformanceTest.py  README.md  sample_knowledge.txt
src/Lesson-04/: 01-BasicMemoryBuffers.py  02-AdvancedMemory.py  03-DynamicMemoryManager.py  04-BenchmarkHRE.py  05-ModelRecommender.py  README.md
src/Lesson-05/: 01-VoiceEngine.py  02-BenchmarkVoice.py  03-AudioRecommender.py  README.md
src/Lesson-06/: 01-BenchmarkTTS.py  02-JarvisCore.py  03-AsyncJarvis.py  03-ModularAsyncJarvis.py  README.md  TTS_benchmark_2026-03-19_13-32-20.csv
src/Lesson-07/: 01-WebUI.py  README.md
src/Lesson-08/: 01-WebUI.py  README.md
src/Lesson-09/: 01-WebUI.py  README.md
src/Lesson-10/: 02-AutoBenchmark.py  README.md
src/Lesson-11/: README.md
src/Lesson-12/: Performance_PostMortem.md
src/Lesson-12/experiment/cpp_inference/: pyproject.toml
src/Lesson-12/experiment/cpp_inference/embedding_engine/: CMakeLists.txt  embedding_engine.cpp
src/Lesson-13/: README.md
src/Utils/: manage_memory.py  metrics.py  telemetry.py
src/core/: brain.py  colors.py  config.py  ear.py  ingestor.py  memory.py  (+4 more)
typings/: llama_engine.pyi
(+28 files in other folders)
